[package]
name = "kastl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
dirs = "6.0.0"
inquire = "0.9.4"
keyring = { version = "3.6.3", features = ["apple-native", "linux-native-async-persistent", "tokio", "crypto-rust"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1.0.228"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
