[package]
name = "kastl"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.49", features = ["derive"] }
dirs = "6.0.0"
inquire = "0.9.4"
keyring = { version = "3.6.3", features = ["apple-native", "linux-native-async-persistent", "tokio", "crypto-rust"] }
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
toml = "1.1.2"
